<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >


    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="361dp"
        android:layout_height="200dp"
        android:layout_above="@+id/nameTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp" />

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textSize="20sp"
        android:layout_above="@id/name"/>

    <TextView
        android:id="@+id/bioTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bioTitle"
        android:textSize="20sp"
        android:layout_above="@+id/biography"/>

    <TextView
        android:id="@+id/yearTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Year"
        android:textSize="20sp"
        android:layout_above="@+id/year"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_above="@+id/yearTitle"/>

    <EditText
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_above="@+id/bioTitle"/>

    <EditText
        android:id="@+id/biography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:layout_marginBottom="70dp"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/saveButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true"

        android:background="#dad4d4"
        android:text="@string/Save"
        android:textSize="10sp" />


</RelativeLayout >